--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,12 @@ hilt = "2.57.2"
 compose = "2025.10.00"
 compose-activity = "1.11.0"
 compose-viewmodel = "2.9.4"
+kotlinx-coroutines = "1.10.2"
+kotlinx-serialization = "1.9.0"
+retrofit = "3.0.0"
+datastore = "1.1.7"
+paging = "3.3.6"
+coil = "3.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -28,10 +34,21 @@ dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", vers
 dagger-hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 compose = { group = "androidx.compose", name = "compose-bom", version.ref = "compose" }
-compose-material = { module = "androidx.compose.material3:material3" }
+compose-runtime = { module = "androidx.compose.runtime:runtime" }
+compose-foundation = { module = "androidx.compose.foundation:foundation" }
+compose-material3 = { module = "androidx.compose.material3:material3" }
+compose-ui = { module = "androidx.compose.ui:ui" }
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "compose-activity" }
 compose-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "compose-viewmodel" }
+kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
+retrofit-converter = { group = "com.squareup.retrofit2", name = "converter-kotlinx-serialization", version.ref = "retrofit"}
+androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
+androidx-paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
+androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
+coil = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -40,6 +57,7 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt"}
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 
 [bundles]
 app = [
@@ -47,16 +65,22 @@ app = [
     "androidx-appcompat",
     "dagger-hilt-android",
     "material",
-    "compose-material",
+    "compose-material3",
     "compose-ui-tooling-preview",
     "compose-activity",
     "compose-viewmodel"
 ]
 base = [
-
+    "compose-runtime",
+    "compose-viewmodel",
+    "dagger-hilt-android",
+    "kotlinx-coroutines",
+    "kotlinx-serialization-json"
 ]
 core = [
-
+    "retrofit",
+    "retrofit-converter",
+    "androidx-datastore"
 ]
 data = [
 
@@ -64,8 +88,16 @@ data = [
 domain = [
 
 ]
+feature-home = [
+    "androidx-paging",
+    "androidx-paging-compose"
+]
 ui = [
-
+    "compose-foundation",
+    "compose-material3",
+    "compose-ui",
+    "compose-ui-tooling-preview",
+    "coil"
 ]
 test = [
     "junit"
