--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,10 +19,13 @@ compose-activity = "1.11.0"
 compose-viewmodel = "2.9.4"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
+kotlinx-serialization-core = "1.8.1"
 retrofit = "3.0.0"
 datastore = "1.1.7"
 paging = "3.3.6"
 coil = "3.3.0"
+nav3 = "1.0.0-alpha11"
+lifecycle-viewmodel-nav3 = "2.10.0-alpha05"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +45,7 @@ compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview"
 compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "compose-activity" }
 compose-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "compose-viewmodel" }
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
+kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinx-serialization-core" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
 retrofit-converter = { group = "com.squareup.retrofit2", name = "converter-kotlinx-serialization", version.ref = "retrofit"}
@@ -49,6 +53,9 @@ androidx-datastore = { group = "androidx.datastore", name = "datastore-preferenc
 androidx-paging = { group = "androidx.paging", name = "paging-runtime", version.ref = "paging" }
 androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "paging" }
 coil = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "nav3" }
+androidx-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "lifecycle-viewmodel-nav3" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -68,7 +75,11 @@ app = [
     "compose-material3",
     "compose-ui-tooling-preview",
     "compose-activity",
-    "compose-viewmodel"
+    "compose-viewmodel",
+    "androidx-navigation3-runtime",
+    "androidx-navigation3-ui",
+    "androidx-lifecycle-viewmodel-navigation3",
+    "kotlinx-serialization-core",
 ]
 base = [
     "compose-runtime",
@@ -93,6 +104,10 @@ feature-home = [
     "androidx-paging-compose"
 ]
 ui = [
+    "androidx-navigation3-runtime",
+    "androidx-navigation3-ui",
+    "androidx-lifecycle-viewmodel-navigation3",
+    "kotlinx-serialization-core",
     "compose-foundation",
     "compose-material3",
     "compose-ui",
