--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,12 +14,13 @@ espressoCore = "3.7.0"
 appcompat = "1.7.1"
 material = "1.13.0"
 hilt = "2.57.2"
+hilt-navigation = "1.3.0"
 compose = "2025.10.00"
 compose-activity = "1.11.0"
 compose-viewmodel = "2.9.4"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
-kotlinx-serialization-core = "1.8.1"
+kotlinx-serialization-core = "1.9.0"
 retrofit = "3.0.0"
 datastore = "1.1.7"
 paging = "3.3.6"
@@ -35,6 +36,7 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 dagger-hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 dagger-hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hilt-navigation" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 compose = { group = "androidx.compose", name = "compose-bom", version.ref = "compose" }
 compose-runtime = { module = "androidx.compose.runtime:runtime" }
@@ -71,6 +73,7 @@ app = [
     "androidx-core-ktx",
     "androidx-appcompat",
     "dagger-hilt-android",
+    "hilt-navigation-compose",
     "material",
     "compose-material3",
     "compose-ui-tooling-preview",
@@ -85,6 +88,7 @@ base = [
     "compose-runtime",
     "compose-viewmodel",
     "dagger-hilt-android",
+    "hilt-navigation-compose",
     "kotlinx-coroutines",
     "kotlinx-serialization-json"
 ]
